--- a/style/style.css
+++ b/style/style.css
@@ -12,7 +12,7 @@ body {
   font-family: Arial, Helvetica, sans-serif;
   font-size: 13px;
 }
-.dropbox__list:hover .arrow {
+.dropbox__list:hover .dropdown {
   color: #2aacc8;
   background-color: #fff;
   box-shadow: 0 -5px #2aacc8;
@@ -36,11 +36,11 @@ ul {
   max-width: 1000px;
   margin: 0 auto;
 }
-.header__container {
+.header__inner {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  height: 120px;
+  min-height: 120px;
 }
 .logo__image {
   display: block;
@@ -50,13 +50,11 @@ ul {
 }
 .header__navigation {
   display: flex;
-  justify-content: space-between;
 }
 .navigation__item {
   display: flex;
   align-items: center;
 }
-
 .navigation__item:not(:last-child) {
   margin-right: 24px;
 }
@@ -70,24 +68,22 @@ ul {
   padding: 0 13px;
   background-color: inherit;
 }
-.dropbox {
+.dropdown .navigation__link {
   position: relative;
   padding-right: 27px;
-  transition-duration: all 20s;
 }
 .navigation__link:hover {
   color: #2aacc8;
   background-color: #fff;
   box-shadow: 0 -5px #2aacc8;
 }
-
-.arrow::after {
+.dropdown::after {
   content: "\276F";
   transform: rotate(90deg);
   position: absolute;
   right: 10px;
 }
-.arrow:hover::after {
+.dropdown:hover::after {
   color: #000;
   transform: rotate(270deg);
 }
@@ -95,8 +91,10 @@ ul {
   display: none;
   position: absolute;
   background-color: #fff;
-  padding: 0 6px;
+  padding: 0 6px 8px 0px;
   top: 36px;
+  left: 0;
+  box-shadow: 0 5px #2aacc8;
 }
 .dropbox__link {
   width: 200px;
@@ -107,7 +105,7 @@ ul {
   font-size: 13px;
   line-height: 2.8;
 }
-.arrow {
+.dropdown {
   position: relative;
 }
 .dropbox__item:not(:last-child) {
@@ -117,12 +115,12 @@ ul {
 .dropbox__link:hover {
   color: #2aacc8;
 }
-.arrow:hover .dropbox__list {
+.dropdown:hover .dropbox__list {
   display: block;
   top: 36px;
   position: absolute;
 }
-.arrow:hover {
+.dropdown:hover {
   color: #2aacc8;
   background-color: #fff;
   box-shadow: 0 -5px #2aacc8;
@@ -132,7 +130,6 @@ ul {
 .main__banner {
   background-color: #81e4ed;
   padding: 30px 0;
-  margin-bottom: 5px;
 }
 .header__container {
   position: relative;
@@ -163,10 +160,11 @@ ul {
 .article__container {
   display: flex;
   justify-content: space-between;
-  padding: 50px 0;
+  align-items: center;
+  min-height: 303px;
 }
 .article__item {
-  max-width: 217px;
+  max-width: 218px;
 }
 .article__item:not(:last-child) {
   margin-right: 43px;
@@ -186,25 +184,23 @@ ul {
   align-items: center;
   margin-right: 18px;
 }
-.name__img {
-  width: 24px;
-  height: 24px;
-  fill: #fff;
-}
 .name__title {
   font-size: 15px;
   line-height: 1.3;
   font-weight: 700;
   text-transform: uppercase;
+  display: flex;
+  align-items: center;
 }
-.article__subtitle {
-  display: block;
+.article__text {
   line-height: 1.5;
   font-size: 13px;
   margin-bottom: 30px;
 }
+.read__more {
+  display: flex;
+}
 .article__link {
-  display: inline-block;
   color: #2aacc8;
 }
 .link__symbol {
@@ -226,8 +222,7 @@ ul {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 0 50px 0 22px;
-  height: 140px;
+  padding: 38px 22px;
 }
 .send-field__description {
   max-width: 610px;
@@ -242,10 +237,9 @@ ul {
 }
 .send-field__button {
   display: flex;
-  justify-content: end;
+  justify-content: space-between;
   align-items: center;
   height: 60px;
-
   color: #0d0707;
   text-transform: uppercase;
   font-weight: 700;
@@ -257,29 +251,39 @@ ul {
   border: 1px solid #2aacc8;
   filter: drop-shadow(0px 2px 1.5px rgba(0, 0, 0, 0.2));
   border-radius: 8px;
-  background: url(../icons/download-psd.svg) left 19px center/30px no-repeat,
-    linear-gradient(
-      0deg,
-      #29abc7 0%,
-      #29abc7 0%,
-      #5fcddd 15%,
-      #71d9e5 50%,
-      #81e3ed 100%
-    );
+  background: linear-gradient(
+    0deg,
+    #29abc7 0%,
+    #29abc7 0%,
+    #5fcddd 15%,
+    #71d9e5 50%,
+    #81e3ed 100%
+  );
 }
 .send-field__button:hover {
   filter: invert(100%);
 }
 
 /* ---------------------------------------------------------------- */
-.footer {
-}
 .footer__container {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  height: 93px;
+  min-height: 93px;
+  line-height: 1.4;
 }
 .footer__copyright {
   max-width: 640px;
+}
+
+/* --------------------------------------------------------------------- */
+.icn::before {
+  font-family: "icomoon";
+  content: "\e900", "\e902", "\e903", "\e904";
+  color: #fff;
+  font-size: 24px;
+}
+.icon-download-psd::before {
+  color: #fff;
+  font-size: 30px;
 }
